k8s-vote-app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
