k8s-vote-app/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-svc
spec:
  type: ClusterIP
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
    # nodePort: 31001
  selector:
    app: result
