k8s-vote-app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: NodePort
  ports:
  # - name: "vote-service"
  - port: 5000
    targetPort: 80
    # nodePort: 31000
  selector:
    app: vote
